<resources>
    <string name="app_name">Star Aviation</string>


    <string name="test_title"><a href="https://www.geeksforgeeks.org/">Tab Stepper With Scroll Overflow</a></string>

    <!-- Titles -->
    <string name="title_text_color">Text Color</string>
    <string name="title_widget_color">Widget Color</string>
    <string name="title_icon_size">Icon Size</string>
    <string name="title_text_size">Text Size</string>

    <string name="title_progress_stepper">Progress Stepper</string>
    <string name="title_fleets_stepper">Fleets Stepper</string>
    <string name="title_tab_stepper">Tab Stepper</string>
    <string name="title_tab_numbered_stepper">Numbered Tab Stepper</string>
    <string name="title_fade_anim_stepper">Stepper With Fade Transition Animation</string>
    <string name="title_no_up_nav_stepper">Stepper Without Up Navigation</string>
    <string name="title_without_navigation_components">Tab Stepper Without Navigation Components</string>
    <string name="title_with_overflow">Tab Stepper With Scroll Overflow</string>

    <!-- Actions -->
    <string name="action_previous_step">Previous Step</string>
    <string name="action_next_step">Next Step</string>

    <!-- Labels -->
    <string name="label_g">G</string>
    <string name="label_r">R</string>
    <string name="label_b">B</string>
    <string name="label_size">Size</string>


    <string name="add_user_icon" translatable="false"></string>
    <string name="call_icon" translatable="false"></string>
    <string name="calendar" translatable="false"></string>
    <string name="update" translatable="false"></string>
    <string name="arrow_down" translatable="false"></string>
    <string name="close" translatable="false"></string>
    <string name="logout" translatable="false"></string>
    <string name="back" translatable="false"></string>
    <string name="trash" translatable="false"></string>
    <string name="time" translatable="false"></string>
    <string name="place" translatable="false"></string>
    <string name="map_icon" translatable="false"></string>
    <string name="mail_icon" translatable="false"></string>
    <string name="ready_notice">Ready to fly</string>
    <string name="not_ready_notice">not ready to fly</string>
    <string name="pilot">Pilot</string>
    <string name="num_passenger">Number of passenger</string>
    <string name="type_plane">Type</string>
    <string name="date_zone">Date and zone</string>
    <string name="depart">Depart</string>
    <string name="arrival">arrival</string>
    <string name="doing">processing</string>
    <string name="password">password</string>
</resources>